fixed hardware sim scale